--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["1000 meters", "V:/ENV859_PS4/Scratch/StrmBuff1km.shp"]
+            "args": ["1000", "V:/ENV859_PS4/Scratch/StrmBuff1km.shp"]
         }
     ]
 }
